--- a/web/account.ejs
+++ b/web/account.ejs
@@ -13,7 +13,7 @@
           <h3 class="panel-title">Account</h3> 
          </div> 
          <div class="col col-xs-6 text-right"> 
-          <button type="button" class="btn btn-sm btn-primary btn-create">Add</button> 
+          <!-- <button type="button" class="btn btn-sm btn-primary btn-create">Add</button>  -->
          </div>   
         </div> 
        </div> 
@@ -25,40 +25,38 @@
            </th> 
            <th class="hidden-xs">ID</th> 
            <th>UserName</th> 
-           <th>Email</th> 
+           <th>Email</th>
+           <th>Enable</th>
+           <th>Enable From</th>
           </tr> 
          </thead> 
-         <tbody><tr> 
-          <td align="center"><a class="btn btn-default"><em class="fa fa-pencil"></em></a> <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-          </td> 
-          <td class="hidden-xs">1</td> 
-          <td>Nguyễn văn A</td> 
-          <td>hocwebgiare@gmail.com</td> 
-         </tr> 
-         <tr> 
-          <td align="center"><a class="btn btn-default"><em class="fa fa-pencil"></em></a> <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-          </td> 
-          <td class="hidden-xs">2</td> 
-          <td>Nguyễn văn B</td> 
-          <td>hocwebgiare@gmail.com</td> 
-         </tr> 
-         <tr> 
-          <td align="center"><a class="btn btn-default"><em class="fa fa-pencil"></em></a> <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-          </td> 
-          <td class="hidden-xs">3</td> 
-          <td>Nguyễn văn C</td> 
-          <td>hocwebgiare@gmail.com</td> 
-         </tr> 
-         <tr> 
-          <td align="center"><a class="btn btn-default"><em class="fa fa-pencil"></em></a> <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-          </td> 
-          <td class="hidden-xs">4</td> 
-          <td>Nguyễn văn D</td> 
-          <td>hocwebgiare@gmail.com</td> 
-         </tr> 
-        </tbody></table> 
-       </div> 
-       <div class="panel-footer"> 
+         <tbody>
+          <%
+        if(userData.length!=0){
+        var i=1;
+        userData.forEach(function(data){
+        %>
+        <tr>
+          <tr>
+            <td align="center"><a class="btn btn-default"><em class="fa fa-pencil"></em></a> <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+            </td>
+            <td class="hidden-xs"><%=data.id %></td>
+            <td><%=data.name %></td>
+            <td><%=data.email %></td>
+            <td><input type="text" value="<%= data.isEnable %>" name="enable"/></td>
+            <td><input type="date" value="${data.enableFrom}" name="dateEnable"/><%=data.enableFrom %></td>
+           </tr>
+        </tr>
+        <%  i++; }) %>
+        <% } else{ %>
+            <tr>
+                <td colspan="7">No Data Found</td>
+            </tr>
+        <% } %>
+
+        </tbody></table>
+       </div>
+       <div class="panel-footer">
         <div class="row"> 
          <div class="col col-xs-4">Trang 1 của 5 </div> 
          <div class="col col-xs-8"> 
