--- a/web/account.ejs
+++ b/web/account.ejs
@@ -39,8 +39,8 @@
         <tr>
           <tr>
             <td align="center">
-              <form action="manager" method="POST">
-                <input class="btn btn-default" type="submit" name="aaa"><em class="fa fa-pencil" ></em></input>
+              <form action="managers" method="POST">
+                <a class="btn btn-default" href="/manager?<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
               </form>
             </td>
             <td class="hidden-xs"><%=data.id %></td>
