--- a/web/account.ejs
+++ b/web/account.ejs
@@ -40,7 +40,7 @@
           <tr>
             <td align="center">
               <form action="managers" method="POST">
-                <a class="btn btn-default" href="/manager?<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
+                <a class="btn btn-default" href="/manager?id=<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
               </form>
             </td>
             <td class="hidden-xs"><%=data.id %></td>
