--- a/web/account.ejs
+++ b/web/account.ejs
@@ -2,15 +2,22 @@
 <link rel="stylesheet" href="css/account.css"/> 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="js/jquery-1.11.1.min.js"></script>
-<div class="container"> 
+<div class="container" style="margin: auto;"> 
     <div class="row"> 
      <h1 class="text-center">List Account</h1> 
      <div class="col-md-10 col-md-offset-1"> 
-      <div class="panel panel-default panel-table" style="width: 1120px;"> 
+      <div class="panel panel-default panel-table" style="width: 1120px"> 
        <div class="panel-heading"> 
         <div class="row"> 
          <div class="col col-xs-6"> 
           <h3 class="panel-title">Account</h3> 
+          <div class="buttonLogOut" style=" font-size: large">
+            <p>
+                <a href="/logout">
+                  <span class="glyphicon glyphicon-log-out"></span>
+                </a>
+              </p>
+         </div>
          </div> 
          <div class="col col-xs-6 text-right"> 
          </div>   
@@ -23,11 +30,11 @@
            <th><em class="fa fa-cog"></em>
            </th> 
            <th class="hidden-xs">ID</th> 
-           <th>UserName</th> 
+           <th>UserName</th>
            <th>Email</th>
+           <th>Privacy</th>
            <th>Enable</th>
            <th>Enable From</th>
-           <th>Avatar</th>
           </tr> 
          </thead> 
          <tbody>
@@ -44,11 +51,11 @@
               </form>
             </td>
             <td class="hidden-xs"><%=data.id %></td>
-            <td><%=data.name %></td>
+            <td><input type="text" value="<%= data.name %>" name="name"/></td>
             <td><%=data.email %></td>
-            <td><input type="text" value="<%= data.avatar %>" name="avatar"/></td>
+            <td><%=data.privacy %></td>
             <td><input type="text" value="<%= data.isEnable %>" name="enable"/></td>
-            <td><input type="date" value="${data.enableFrom}" name="dateEnable"/><%=data.enableFrom %></td>
+            <td><input type="text" value="<%=data.enableFrom %>" name="dateEnable"/></td>
            </tr>
         </tr>
         <%  i++; }) %>
@@ -60,7 +67,7 @@
 
         </tbody></table>
        </div>
-       <div class="panel-footer">
+       <!-- <div class="panel-footer">
         <div class="row"> 
          <div class="col col-xs-4">Trang 1 của 5 </div> 
          <div class="col col-xs-8"> 
@@ -84,15 +91,9 @@
           </ul> 
          </div> 
         </div> 
-       </div> 
+       </div> -- -->
       </div> 
      </div> 
     </div>
-    <div class="buttonLogOut" style="padding: 93px; font-size: large">
-        <p>Log-out
-            <a href="/logout">
-              <span class="glyphicon glyphicon-log-out"></span>
-            </a>
-          </p>
-     </div>
+    
    </div>
