--- a/web/account.ejs
+++ b/web/account.ejs
@@ -10,7 +10,7 @@
        <div class="panel-heading"> 
         <div class="row"> 
          <div class="col col-xs-6"> 
-          <h3 class="panel-title">Account</h3> 
+          <h3 class="panel-title">Logout</h3> 
           <div class="buttonLogOut" style=" font-size: large">
             <p>
                 <a href="/logout">
