--- a/web/account.ejs
+++ b/web/account.ejs
@@ -10,11 +10,11 @@
        <div class="panel-heading"> 
         <div class="row"> 
          <div class="col col-xs-6"> 
-          <h3 class="panel-title">Logout</h3> 
+          <h3 class="panel-title"><form action="account" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
           <div class="buttonLogOut" style=" font-size: large">
             <p>
                 <a href="/logout">
-                  <span class="glyphicon glyphicon-log-out"></span>
+                  Logout <span class="glyphicon glyphicon-log-out"></span>
                 </a>
               </p>
          </div>
@@ -95,5 +95,4 @@
       </div> 
      </div> 
     </div>
-    
    </div>
