--- a/web/reportManager.ejs
+++ b/web/reportManager.ejs
@@ -21,7 +21,7 @@
                 </a>
               </p>
          </div>
-         <h3 class="panel-title"><form action="report" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
+         <h3 class="panel-title"><form action="report" method="POST"><input type="submit" value="Search" ><input type="text" name="searchValue" placeholder="Search" ></form></h3>
          </div> 
          <div class="col col-xs-6 text-right"> 
          </div>   
