--- a/web/reportManager.ejs
+++ b/web/reportManager.ejs
@@ -46,8 +46,8 @@
         <tr>
           <tr>
             <td class="hidden-xs"><%=data.id %></td>
-            <td><input type="text" value="<%= data.name %>" name="name"/></td>
-            <td><textarea><%=data.content %></textarea></td>
+            <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
+            <td><textarea readonly><%=data.content %></textarea></td>
             <td><%=data.feedbacktime %></td>
            </tr>
         </tr>
