--- a/web/account.ejs
+++ b/web/account.ejs
@@ -44,11 +44,11 @@
               </form>
             </td>
             <td class="hidden-xs"><%=data.id %></td>
-            <td><input type="text" value="<%= data.name %>" name="name"/></td>
+            <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
             <td><%=data.email %></td>
             <td><%=data.privacy %></td>
-            <td><input type="text" value="<%= data.isEnable %>" name="enable"/></td>
-            <td><input type="text" value="<%=data.enableFrom %>" name="dateEnable"/></td>
+            <td><input type="text" value="<%= data.isEnable %>" name="enable" readonly/></td>
+            <td><input type="text" value="<%=data.enableFrom %>" name="dateEnable" readonly/></td>
            </tr>
         </tr>
         <%  i++; }) %>
