--- a/web/account.ejs
+++ b/web/account.ejs
@@ -47,8 +47,8 @@
             <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
             <td><%=data.email %></td>
             <td><%=data.privacy %></td>
-            <td><input type="text" value="<%= data.isEnable %>" name="enable" readonly/></td>
-            <td><input type="text" value="<%=data.enableFrom %>" name="dateEnable" readonly/></td>
+            <td><input type="text" value="<%= data.is_block %>" name="enable" readonly/></td>
+            <td><input type="text" value="<%=data.block_deadline %>" name="dateEnable" readonly/></td>
            </tr>
         </tr>
         <%  i++; }) %>
