--- a/web/petBreed.ejs
+++ b/web/petBreed.ejs
@@ -4,15 +4,18 @@
 <script src="js/jquery-1.11.1.min.js"></script>
 <body style="background-image: url(https://geniusmindgraphics.com/wp-content/uploads/2017/11/mobile-app-background.jpeg);">
 <div class="container" style="margin-right: 180px;"> 
+    <h2><a href="/addPet" style="color:chartreuse; text-decoration: none;">
+        Add a new breed
+      </a></h2> 
     <div class="row"> 
-     <h1 class="text-center" style="color: black;">List Account</h1> 
+     <h1 class="text-center" style="color: black;">List Breed</h1> 
      <div class="col-md-10 col-md-offset-1"> 
       <div class="panel panel-default panel-table" style="width: 1120px"> 
        <div class="panel-heading"> 
         <div class="row"> 
          <div class="col col-xs-6"> 
-          <h3 class="panel-title"><form action="account" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
-         </div> 
+          <h3 class="panel-title"><form action="petBreed" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
+         </div>
          <div class="col col-xs-6 text-right"> 
          </div>   
         </div> 
@@ -24,35 +27,28 @@
            <th><em class="fa fa-cog"></em>
            </th> 
            <th class="hidden-xs">ID</th> 
-           <th>UserName</th>
-           <th>Email</th>
-           <th>Is Vip</th>
-           <th>Block</th>
-           <th>Block Deadline</th>
+           <th>Pet Name</th>
+           <th>Modified Time</th>
           </tr> 
          </thead> 
          <tbody>
           <%
-        if(userData.length!=0){
+        if(pet.length!=0){
         var i=1;
-        userData.forEach(function(data){
+        pet.forEach(function(data){
         %>
         <tr>
           <tr>
             <td align="center">
               <form action="managers" method="POST">
-                <a class="btn btn-default" href="/manager?id=<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
+                <a class="btn btn-default" href="/updateBreed?id=<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
               </form>
             </td>
             <td class="hidden-xs"><%=data.id %></td>
             <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
-            <td><%=data.email %></td>
-            <td><%=data.is_vip %></td>
-            <td><input type="text" value="<%= data.is_block %>" name="enable" readonly/></td>
-            <td><input type="text" value="<%=data.block_deadline %>" name="dateEnable" readonly/></td>
+            <td><input type="text" value="<%=data.modified_time %>" name="dateEnable" readonly/></td>
            </tr>
         </tr>
-        
         <%  i++; }) %>
         <% } else{ %>
             <tr>
@@ -60,7 +56,7 @@
             </tr>
         <% } %>
             <% for(var j = 1; j < 10; j++) {%>
-              <a href="/account?page=<%= j %>"><label style="margin: 5px;"><%= j %></label></a>
+              <a href="/petBreed?page=<%= j %>"><label style="margin: 5px;"><%= j %></label></a>
            <% } %>
         </tbody></table>
        </div>
