--- a/web/vip.ejs
+++ b/web/vip.ejs
@@ -11,7 +11,7 @@
        <div class="panel-heading"> 
         <div class="row"> 
          <div class="col col-xs-6"> 
-          <h3 class="panel-title"><form action="account" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
+          <h3 class="panel-title"><form action="vip" method="POST"><input type="submit" value="Search"><input type="text" name="searchValue" ></form></h3>
          </div> 
          <div class="col col-xs-6 text-right"> 
          </div>   
@@ -21,35 +21,24 @@
         <table class="table table-striped table-bordered table-list"> 
          <thead> 
           <tr> 
-           <th><em class="fa fa-cog"></em>
-           </th> 
            <th class="hidden-xs">ID</th> 
-           <th>UserName</th>
-           <th>Email</th>
-           <th>Is Vip</th>
-           <th>Block</th>
-           <th>Block Deadline</th>
+           <th>Name</th>
+           <th>Message</th>
+           <th>Send At</th>
           </tr> 
          </thead> 
          <tbody>
           <%
-        if(userData.length!=0){
+        if(vip.length!=0){
         var i=1;
-        userData.forEach(function(data){
+        vip.forEach(function(data){
         %>
         <tr>
           <tr>
-            <td align="center">
-              <form action="managers" method="POST">
-                <a class="btn btn-default" href="/manager?id=<%=data.id %>" type="submit" name="aaa"><em class="fa fa-pencil" ></em></a>
-              </form>
-            </td>
             <td class="hidden-xs"><%=data.id %></td>
             <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
-            <td><%=data.email %></td>
-            <td><%=data.is_vip %></td>
-            <td><input type="text" value="<%= data.is_block %>" name="enable" readonly/></td>
-            <td><input type="text" value="<%=data.block_deadline %>" name="dateEnable" readonly/></td>
+            <td><input type="text" value="<%=data.message %>" name="dateEnable" readonly/></td>
+            <td><input type="text" value="<%=data.send_time %>" name="send_time" readonly/></td>
            </tr>
         </tr>
         
@@ -60,7 +49,7 @@
             </tr>
         <% } %>
             <% for(var j = 1; j < 10; j++) {%>
-              <a href="/account?page=<%= j %>"><label style="margin: 5px;"><%= j %></label></a>
+              <a href="/vip?page=<%= j %>"><label style="margin: 5px;"><%= j %></label></a>
            <% } %>
         </tbody></table>
        </div>
