--- a/web/vip.ejs
+++ b/web/vip.ejs
@@ -5,7 +5,7 @@
 <body style="background-image: url(https://geniusmindgraphics.com/wp-content/uploads/2017/11/mobile-app-background.jpeg);">
 <div class="container" style="margin-right: 180px;"> 
     <div class="row"> 
-     <h1 class="text-center" style="color: black;">List Account</h1> 
+     <h1 class="text-center" style="color: black;">List Confirm</h1> 
      <div class="col-md-10 col-md-offset-1"> 
       <div class="panel panel-default panel-table" style="width: 1120px"> 
        <div class="panel-heading"> 
@@ -23,7 +23,7 @@
           <tr> 
            <th class="hidden-xs">ID</th> 
            <th>Name</th>
-           <th>Message</th>
+           <th>Confirm Image</th>
            <th>Send At</th>
           </tr> 
          </thead> 
@@ -37,7 +37,7 @@
           <tr>
             <td class="hidden-xs"><%=data.id %></td>
             <td><input type="text" value="<%= data.name %>" name="name" readonly/></td>
-            <td><input type="text" value="<%=data.message %>" name="dateEnable" readonly/></td>
+            <td><img style="width: 200px;height: 150px" src="<%=data.confirm_img %>"></td>
             <td><input type="text" value="<%=data.send_time %>" name="send_time" readonly/></td>
            </tr>
         </tr>
