--- a/web/image.ejs
+++ b/web/image.ejs
@@ -9,7 +9,7 @@
         userData.forEach(function(data){
         %>
         <form action="image" method="POST" style="padding-left: 300px;">
-            <label style="background-color: chartreuse;"><%=data.id %></label>
+            <input name="pet_id" value="<%=data.id %>" style="background-color: chartreuse; width: 22px; height: 10px; " readonly>
             <br><img style="width: 120px; height: 120px;" src="<%=data.avatar %>"><input type="text" style="width: 600px; height: 20px; margin-top: 70px;" name="textareaImage" value="<%=data.avatar %>"><br>
             <input type="submit" value="Update" style="margin-left: 400px;">
           </form>
